<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black_overlay"
    android:orientation="vertical"
    tools:context=".ActivityRegistrationLogin.LoginActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="139dp"
        android:layout_height="139dp"
        android:layout_gravity="center"
        android:src="@drawable/easy_tour" />

    <LinearLayout
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        >

        <TextView style="@style/loginTitle" />
    </LinearLayout>

    <ImageView
        android:id="@+id/registrationTriangle"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="-15dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:rotation="45"
        android:src="@drawable/square" />

    <RelativeLayout
        android:id="@+id/relativeEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        >

        <ImageView
            android:id="@+id/userEmail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/orange"
            android:padding="8dp"
            android:src="@drawable/email"
            android:tint="@color/lightgray" />

        <EditText
            android:id="@+id/login_email_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/userEmail"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="-4dp"
            android:layout_toRightOf="@+id/userEmail"
            android:background="@color/lightgray"
            android:hint="@string/string_reg_email_ET"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textSize="15sp"


            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        >

        <ImageView
            android:id="@+id/userPassword"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/orange"
            android:padding="8dp"
            android:src="@drawable/key"
            android:tint="@color/lightgray" />

        <EditText
            android:id="@+id/login_password_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/userPassword"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/userPassword"
            android:background="@color/lightgray"
            android:hint="@string/string_reg_password_ET"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            />

    </RelativeLayout>


    <Button
        android:id="@+id/login_BTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/orange"
        android:text="@string/string_login_BTN"
        android:textColor="@color/lightgray" />

    <TextView
        android:id="@+id/login_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_login_TV"
        android:textAlignment="center"
        android:textColor="@color/black_overlay" />

    <TextView
        android:layout_below="@+id/login_TV"
        android:id="@+id/login_status_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#e92c2c"
        />

</LinearLayout>